# MinecraftAnotherJNICheat

./: .gitignore  CMakeLists.txt  conandata.yml
includes/jnihook/: jnihook.cpp  jnihook.h  jnihook.hpp
sdk/: sdk.cpp  sdk.hpp
sdk/net/minecraft/: Bootstrap$1.hpp  Bootstrap.hpp  GameVersion.hpp  MinecraftVersion.hpp  SaveVersion.hpp  SharedConstants.hpp  class_6148.hpp  class_6567.hpp
sdk/net/minecraft/advancement/: Advancement$Builder.hpp  Advancement.hpp  AdvancementCriterion.hpp  AdvancementDisplay.hpp  AdvancementDisplays$ResultConsumer.hpp  AdvancementDisplays$Status.hpp  AdvancementDisplays.hpp  AdvancementEntry.hpp  AdvancementFrame.hpp  AdvancementManager$Listener.hpp  AdvancementManager.hpp  AdvancementPositioner.hpp  AdvancementProgress.hpp  AdvancementRequirements$CriterionMerger.hpp  AdvancementRequirements.hpp  AdvancementRewards$Builder.hpp  AdvancementRewards.hpp  PlacedAdvancement.hpp  PlayerAdvancementTracker$ProgressMap.hpp  PlayerAdvancementTracker.hpp
sdk/net/minecraft/block/: AbstractBannerBlock.hpp  AbstractBlock$AbstractBlockState$ShapeCache.hpp  AbstractBlock$AbstractBlockState.hpp  AbstractBlock$ContextPredicate.hpp  AbstractBlock$OffsetType.hpp  AbstractBlock$Offsetter.hpp  AbstractBlock$Settings.hpp  AbstractBlock$TypedContextPredicate.hpp  AbstractBlock.hpp  AbstractCandleBlock.hpp  AbstractCauldronBlock.hpp  AbstractChestBlock.hpp  AbstractFireBlock.hpp  AbstractFurnaceBlock.hpp  AbstractPlantBlock.hpp  AbstractPlantPartBlock.hpp  AbstractPlantStemBlock.hpp  AbstractPressurePlateBlock.hpp  AbstractRailBlock.hpp  AbstractRedstoneGateBlock.hpp  AbstractSignBlock.hpp  AbstractSkullBlock.hpp  AbstractTorchBlock.hpp  AirBlock.hpp  AmethystBlock.hpp  AmethystClusterBlock.hpp  AnvilBlock.hpp  AttachedStemBlock.hpp  AzaleaBlock.hpp  BambooBlock.hpp  BambooShootBlock.hpp  BannerBlock.hpp  BarrelBlock.hpp  BarrierBlock.hpp  BeaconBlock.hpp  BedBlock.hpp  BeehiveBlock.hpp  BeetrootsBlock.hpp  BellBlock.hpp  BigDripleafBlock.hpp  (+309 more)
sdk/net/minecraft/client/: ClientBrandRetriever.hpp  Keyboard.hpp  MinecraftClient$ChatRestriction$1.hpp  MinecraftClient$ChatRestriction$2.hpp  MinecraftClient$ChatRestriction$3.hpp  MinecraftClient$ChatRestriction$4.hpp  MinecraftClient$ChatRestriction.hpp  MinecraftClient$LoadingContext.hpp  MinecraftClient.hpp  Mouse.hpp  QuickPlay.hpp  QuickPlayLogger$1.hpp  QuickPlayLogger$Log.hpp  QuickPlayLogger$QuickPlayWorld.hpp  QuickPlayLogger$WorldType.hpp  QuickPlayLogger.hpp  RunArgs$Directories.hpp  RunArgs$Game.hpp  RunArgs$Network.hpp  RunArgs$QuickPlay.hpp  RunArgs.hpp  WindowEventHandler.hpp  WindowSettings.hpp
sdk/net/minecraft/command/: BlockDataObject$1.hpp  BlockDataObject.hpp  CommandAction.hpp  CommandExecutionContext.hpp  CommandFunctionAction.hpp  CommandQueueEntry.hpp  CommandRegistryAccess$1.hpp  CommandRegistryAccess.hpp  CommandSource$RelativePosition.hpp  CommandSource$SuggestedIdType.hpp  CommandSource.hpp  ControlFlowAware$Command.hpp  ControlFlowAware$Helper.hpp  ControlFlowAware.hpp  DataCommandObject.hpp  DataCommandStorage$PersistentState.hpp  DataCommandStorage.hpp  EntityDataObject$1.hpp  EntityDataObject.hpp  EntitySelector$1.hpp  EntitySelector.hpp  EntitySelectorOptions$SelectorHandler.hpp  EntitySelectorOptions$SelectorOption.hpp  EntitySelectorOptions.hpp  EntitySelectorReader.hpp  ExecutionControl$1.hpp  ExecutionControl.hpp  ExecutionFlags.hpp  FallthroughCommandAction.hpp  FixedCommandAction.hpp  FloatRangeArgument.hpp  Forkable$RedirectModifier.hpp  Forkable.hpp  Frame$Control.hpp  Frame.hpp  IsolatedCommandAction.hpp  MacroInvocation.hpp  ReturnValueConsumer$1.hpp  ReturnValueConsumer.hpp  SingleCommandAction$MultiSource.hpp  (+9 more)
sdk/net/minecraft/component/: Component$1.hpp  Component.hpp  ComponentChanges$1.hpp  ComponentChanges$AddedRemovedPair.hpp  ComponentChanges$Builder.hpp  ComponentChanges$Type.hpp  ComponentChanges.hpp  ComponentHolder.hpp  ComponentMap$1.hpp  ComponentMap$2.hpp  ComponentMap$3.hpp  ComponentMap$Builder$SimpleComponentMap.hpp  ComponentMap$Builder.hpp  ComponentMap.hpp  ComponentMapImpl.hpp  ComponentType$Builder$SimpleDataComponentType.hpp  ComponentType$Builder.hpp  ComponentType.hpp  DataComponentTypes.hpp  EnchantmentEffectComponentTypes.hpp
sdk/net/minecraft/data/: DataCache$1.hpp  DataCache$CachedData.hpp  DataCache$CachedDataWriter.hpp  DataCache$IntermediaryCache.hpp  DataCache$RunResult.hpp  DataCache$Runner.hpp  DataCache.hpp  DataGenerator$Pack.hpp  DataGenerator.hpp  DataOutput$OutputType.hpp  DataOutput$PathResolver.hpp  DataOutput.hpp  DataProvider$Factory.hpp  DataProvider.hpp  DataWriter.hpp  Main.hpp  MetadataProvider.hpp  SnbtProvider$CompressedData.hpp  SnbtProvider$CompressionException.hpp  SnbtProvider$Tweaker.hpp  SnbtProvider.hpp
sdk/net/minecraft/datafixer/: DataFixTypes$1.hpp  DataFixTypes.hpp  FixUtil.hpp  Schemas$1.hpp  Schemas$2.hpp  Schemas.hpp  TypeReferences$1.hpp  TypeReferences.hpp
sdk/net/minecraft/enchantment/: Enchantment$Builder.hpp  Enchantment$Cost.hpp  Enchantment$Definition.hpp  Enchantment.hpp  EnchantmentEffectContext.hpp  EnchantmentHelper$Consumer.hpp  EnchantmentHelper$ContextAwareConsumer.hpp  EnchantmentHelper.hpp  EnchantmentLevelBasedValue$Clamped.hpp  (+8 more)
src/: Includes.h  MinecraftIncludes.h  main.cpp
src/features/: Category.h  Feature.h  FeatureManager.cpp  FeatureManager.h  KeyBinding.h
src/hooks/: Hooks.cpp  Hooks.hpp
src/hooks/hooks/: AbstractHorseEntityHooks.cpp  CameraHooks.cpp  ClientConnectionHooks.cpp  ClientPlayerEntityHooks.cpp  EntityHooks.cpp  KeyboardHooks.cpp  LightmapTextureManagerHooks.cpp  LivingEntityHooks.cpp  MinecraftClientHooks.cpp  PlayerEntityHooks.cpp  WorldRendererHooks.cpp
src/listeners/: GlobalEventListener.cpp  GlobalEventListener.h  Listener.h  Listeners.cpp  Listeners.h
src/settings/: Setting.h  Settings.h
src/utils/: AnimationUtil.cpp  AnimationUtil.h  ChatUtil.cpp  ChatUtil.h  FrameRateCounterUtil.cpp  FrameRateCounterUtil.h  InventoryUtil.cpp  InventoryUtil.h  JavaUtil.cpp  JavaUtil.h  MathUtil.h  MovementUtil.cpp  MovementUtil.h  RandomUtil.h  TimeUtil.h  Utils.h
(+6823 files in other folders)
